Fixed text alignment

--- a/app/app/components/Attributions/Attribution/Attribution.module.scss
+++ b/app/app/components/Attributions/Attribution/Attribution.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    text-align: left;
     gap: 1rem;
     background-color: var(--background-secondary);
     border-radius: 5px;
